# stasis

./: .clang-tidy  .gitignore  CMakeLists.txt  NOTICE  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/cli/: main.cpp
fuzz/: fuzz_target.cpp
include/stasis/: stasis.hpp
tests/: CMakeLists.txt  test_stasis.cpp
